--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
+baseURL = "http://www.mijndemosite.com/"
+languageCode = "nl"
 title = "Hugo Demo"
 theme = "demo"
